// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders Profile page and empty Specialties 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 1.6rem;
  background: none;
  border: none;
  color: hsla(0,79%,63%);
  padding-left: 2rem;
}

.c5:hover {
  color: hsla(0,58%,57%);
}

.c5 svg {
  fill: hsla(0,79%,63%);
  stroke: hsla(0,79%,63%);
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  font-weight: 500;
  margin-bottom: 2rem;
  color: hsla(0,0%,52%);
  padding-left: 2rem;
}

.c4 svg {
  margin-right: 1rem;
}

.c4:hover {
  color: hsla(146,64%,36%);
}

.c1 {
  min-width: 30rem;
}

.c2 {
  display: block;
  padding-left: 2rem;
  font-size: 1.6rem;
  color: hsl(166,100%,34%);
}

.c2 span {
  font-weight: bold;
}

.c3 {
  font-family: 'Montserrat';
  font-size: 1.4rem;
  margin: 2rem 0;
  padding: 0.5rem 0;
  text-align: center;
  text-transform: uppercase;
  color: hsla(0,0%,40%);
  background-color: hsla(0,0%,95%);
}

.c18 {
  width: 100%;
  padding-left: 32px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c18 h3 {
  border-bottom: 1px solid hsl(0,0%,93%);
  padding-bottom: 24px;
  color: hsla(0,0%,52%);
}

.c18 p {
  margin-top: 15px;
}

.c19 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13 {
  background-color: hsla(0,0%,100%);
  border-radius: 5px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
  box-shadow: 2px 2px 8px hsl(0,0%,74%);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13 h3 {
  padding-bottom: 24px;
  color: hsla(0,0%,52%);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 16px;
}

.c16 {
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  margin-bottom: 8px;
}

.c17 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  outline: none;
  margin-top: 8px;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 1.4rem;
  line-height: 2.4rem;
  background: hsl(166,100%,34%);
  color: hsla(0,0%,100%);
  padding: 0.4rem 0.8rem;
}

.c17:disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c17:hover,
.c17:focus {
  background: hsla(146,64%,36%);
}

.c17:disabled {
  background: hsl(0deg 0% 0% / 70%);
}

.c7 {
  width: 100%;
  height: 208px;
  position: relative;
}

.c8 {
  background-color: hsl(166,100%,34%);
  width: 100%;
  height: 128px;
  border-radius: 5px;
  position: relative;
  z-index: 0;
}

.c8:before,
.c8:after {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  content: '';
  border-radius: 5px;
}

.c8:before {
  background: linear-gradient( 90deg,hsl(166,100%,34%) 64.41%,rgba(0,166,136,0) 100% );
  z-index: 0;
}

.c8:after {
  background-image: url('/pattern.png');
  background-repeat: no-repeat;
  background-size: 446px;
  background-position: right;
  z-index: -1;
}

.c9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 32px;
  position: absolute;
  z-index: 0;
  bottom: 0;
}

.c9 h4 {
  color: hsla(0,0%,7%);
  font-weight: 500;
  font-size: 28px;
  margin-top: 52px;
}

.c9 span {
  color: hsla(0,0%,52%);
  font-weight: 500;
  font-size: 14px;
}

.c10 {
  background-color: hsla(0,0%,98%);
  width: 128px;
  height: 128px;
  display: block;
  border: 2px solid hsla(0,0%,98%);
  border-radius: 64px;
  margin-right: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  background-color: hsla(0,0%,98%);
  padding: 3rem 4rem 6rem;
}

.c0 > section:first-child {
  margin-right: 4rem;
}

.c6 {
  width: 100%;
}

.c11 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 40px;
}

.c12 {
  width: 340px;
  padding-left: 32px;
}

@media (max-width:768px) {
  .c18 {
    padding-left: 0;
  }

  .c18 h3 {
    text-align: center;
    border-bottom: 0;
  }
}

@media (max-width:768px) {
  .c7 {
    margin-top: 26px;
  }
}

@media (max-width:768px) {
  .c9 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    text-align: center;
    padding-left: 0;
    margin-bottom: -40px;
  }

  .c9 h4 {
    margin-top: 16px;
  }
}

@media (max-width:768px) {
  .c10 {
    margin-right: 0;
  }
}

@media screen and (max-width:950px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c0 > section:first-child {
    margin-bottom: 1rem;
  }
}

@media (max-width:1170px) {
  .c11 {
    margin-top: 80px;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1170px) {
  .c12 {
    width: 100%;
    padding-left: 0;
    margin-bottom: 40px;
  }
}

<div>
  <div
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        profile:welcomeUser
      </div>
      <h3
        class="c3"
      >
        profile:userArea
      </h3>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2M12 11a4 4 0 100-8 4 4 0 000 8z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:myProfile
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M22 6l-10 7L2 6"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:messages
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.84 2.61a5.5 5.5 0 00-7.78 0L12 3.67l-1.06-1.06a5.501 5.501 0 00-7.78 7.78l1.06 1.06L12 19.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78v0z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:favoriteTechnologies
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 2L3 6v14a2 2 0 002 2h14a2 2 0 002-2V6l-3-4H6zM3 6h18M16 10a4 4 0 11-8 0"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:userOrders
      </a>
      <h3
        class="c3"
      >
        profile:researcherArea
      </h3>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 12h-6l-2 3h-4l-2-3H2"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M5.45 5.11L2 12v6a2 2 0 002 2h16a2 2 0 002-2v-6l-3.45-6.89A2 2 0 0016.76 4H7.24a2 2 0 00-1.79 1.11v0z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:myTechnologies
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 6H21"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M8 12H21"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M8 18H21"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M3 6H3.01"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M3 12H3.01"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M3 18H3.01"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:myServices
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 4h2a2 2 0 012 2v14a2 2 0 01-2 2H6a2 2 0 01-2-2V6a2 2 0 012-2h2"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M15 2H9a1 1 0 00-1 1v2a1 1 0 001 1h6a1 1 0 001-1V3a1 1 0 00-1-1z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:orders
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3M12 17h.01"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:questions
      </a>
      <h3
        class="c3"
      >
        profile:reviewerArea
      </h3>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2M12 11a4 4 0 100-8 4 4 0 000 8z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:profileCurate
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 19a8 8 0 100-16 8 8 0 000 16zM21 21l-4.35-4.35"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:curateTechnologies
      </a>
      <a
        class="c4"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="hsla(0, 0%, 52%)"
          stroke-width="1.5"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M536.1 273H488c-4.4 0-8 3.6-8 8v275.3c0 2.6 1.2 5 3.3 6.5l165.3 120.7c3.6 2.6 8.6 1.9 11.2-1.7l28.6-39c2.7-3.7 1.9-8.7-1.7-11.2L544.1 528.5V281c0-4.4-3.6-8-8-8zm219.8 75.2l156.8 38.3c5 1.2 9.9-2.6 9.9-7.7l.8-161.5c0-6.7-7.7-10.5-12.9-6.3L752.9 334.1a8 8 0 0 0 3 14.1zm167.7 301.1l-56.7-19.5a8 8 0 0 0-10.1 4.8c-1.9 5.1-3.9 10.1-6 15.1-17.8 42.1-43.3 80-75.9 112.5a353 353 0 0 1-112.5 75.9 352.18 352.18 0 0 1-137.7 27.8c-47.8 0-94.1-9.3-137.7-27.8a353 353 0 0 1-112.5-75.9c-32.5-32.5-58-70.4-75.9-112.5A353.44 353.44 0 0 1 171 512c0-47.8 9.3-94.2 27.8-137.8 17.8-42.1 43.3-80 75.9-112.5a353 353 0 0 1 112.5-75.9C430.6 167.3 477 158 524.8 158s94.1 9.3 137.7 27.8A353 353 0 0 1 775 261.7c10.2 10.3 19.8 21 28.6 32.3l59.8-46.8C784.7 146.6 662.2 81.9 524.6 82 285 82.1 92.6 276.7 95 516.4 97.4 751.9 288.9 942 524.8 942c185.5 0 343.5-117.6 403.7-282.3 1.5-4.2-.7-8.9-4.9-10.4z"
          />
        </svg>
        profile:revisionsHistory
      </a>
      <button
        class="c5"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M868 732h-70.3c-4.8 0-9.3 2.1-12.3 5.8-7 8.5-14.5 16.7-22.4 24.5a353.84 353.84 0 0 1-112.7 75.9A352.8 352.8 0 0 1 512.4 866c-47.9 0-94.3-9.4-137.9-27.8a353.84 353.84 0 0 1-112.7-75.9 353.28 353.28 0 0 1-76-112.5C167.3 606.2 158 559.9 158 512s9.4-94.2 27.8-137.8c17.8-42.1 43.4-80 76-112.5s70.5-58.1 112.7-75.9c43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 7.9 7.9 15.3 16.1 22.4 24.5 3 3.7 7.6 5.8 12.3 5.8H868c6.3 0 10.2-7 6.7-12.3C798 160.5 663.8 81.6 511.3 82 271.7 82.6 79.6 277.1 82 516.4 84.4 751.9 276.2 942 512.4 942c152.1 0 285.7-78.8 362.3-197.7 3.4-5.3-.4-12.3-6.7-12.3zm88.9-226.3L815 393.7c-5.3-4.2-13-.4-13 6.3v76H488c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 0 0 0-12.6z"
          />
        </svg>
        profile:logout
      </button>
    </section>
    <section
      class="c6"
    >
      <section
        class="c7"
      >
        <section
          class="c8"
        />
        <section
          class="c9"
        >
          <img
            class="c10"
            src="https://ui-avatars.com/api/?name=undefined?format=svg&rounded=true&size=128"
          />
          <section>
            <h4 />
            <span>
              profile:curate
            </span>
          </section>
        </section>
      </section>
      <section
        class="c11"
      >
        <aside
          class="c12"
        >
          <section
            class="c13"
          >
            <h3>
              Nova área de atuação
            </h3>
            <form
              class="c14"
            >
              <section
                class="c15"
              >
                <label
                  class="c16"
                >
                  Área de atuação
                </label>
                <div
                  class=" css-dyr6gj-container"
                >
                  <div
                    class=" css-goxfpg-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class=" css-1wa3eu0-placeholder"
                      >
                        Selecione a área
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-reviewer-categories-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 1.4rem; font-family: 'Montserrat'; font-weight: 400; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1ehwr9j-IndicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
              <section
                class="c15"
              >
                <label
                  class="c16"
                >
                  Subarea de atuação
                </label>
                <div
                  class=" css-19pra7p-container"
                >
                  <div
                    class=" css-goxfpg-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class=" css-1wa3eu0-placeholder"
                      >
                        Nenhuma sub-área disponível
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            disabled=""
                            id="react-select-reviewer-sub-categories-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 1.4rem; font-family: 'Montserrat'; font-weight: 400; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1ehwr9j-IndicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
              <button
                class="c17"
                disabled=""
                type="submit"
              >
                Adicionar Área de Atuação
              </button>
            </form>
          </section>
        </aside>
        <section
          class="c18"
        >
          <h3>
            profile:curateMySpecialties
          </h3>
          <ul
            class="c19"
          >
            <p>
              Nenhuma área de atuação!
            </p>
          </ul>
        </section>
      </section>
    </section>
  </div>
</div>
`;

exports[`it renders Profile page correctly 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 1.6rem;
  background: none;
  border: none;
  color: hsla(0,79%,63%);
  padding-left: 2rem;
}

.c5:hover {
  color: hsla(0,58%,57%);
}

.c5 svg {
  fill: hsla(0,79%,63%);
  stroke: hsla(0,79%,63%);
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.4rem;
  font-weight: 500;
  margin-bottom: 2rem;
  color: hsla(0,0%,52%);
  padding-left: 2rem;
}

.c4 svg {
  margin-right: 1rem;
}

.c4:hover {
  color: hsla(146,64%,36%);
}

.c1 {
  min-width: 30rem;
}

.c2 {
  display: block;
  padding-left: 2rem;
  font-size: 1.6rem;
  color: hsl(166,100%,34%);
}

.c2 span {
  font-weight: bold;
}

.c3 {
  font-family: 'Montserrat';
  font-size: 1.4rem;
  margin: 2rem 0;
  padding: 0.5rem 0;
  text-align: center;
  text-transform: uppercase;
  color: hsla(0,0%,40%);
  background-color: hsla(0,0%,95%);
}

.c18 {
  width: 100%;
  padding-left: 32px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c18 h3 {
  border-bottom: 1px solid hsl(0,0%,93%);
  padding-bottom: 24px;
  color: hsla(0,0%,52%);
}

.c18 p {
  margin-top: 15px;
}

.c19 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c20 {
  width: 100%;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid hsl(0,0%,93%);
  color: hsla(0,0%,52%);
}

.c20 b {
  position: relative;
  padding-right: 20px;
}

.c20 b::before {
  position: absolute;
  right: 5px;
  content: '-';
}

.c21 {
  background: none;
  color: hsla(0,79%,63%);
  padding: 0.4rem 0.8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  border: none;
  outline: none;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 1.4rem;
  line-height: 2.4rem;
  margin: 0 0 0 auto;
}

.c21:hover,
.c21:focus {
  color: hsla(0,0%,100%);
  background: hsla(0,79%,63%);
}

.c13 {
  background-color: hsla(0,0%,100%);
  border-radius: 5px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
  box-shadow: 2px 2px 8px hsl(0,0%,74%);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c13 h3 {
  padding-bottom: 24px;
  color: hsla(0,0%,52%);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 16px;
}

.c16 {
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  margin-bottom: 8px;
}

.c17 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  outline: none;
  margin-top: 8px;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 1.4rem;
  line-height: 2.4rem;
  background: hsl(166,100%,34%);
  color: hsla(0,0%,100%);
  padding: 0.4rem 0.8rem;
}

.c17:disabled {
  pointer-events: none;
  opacity: 0.5;
}

.c17:hover,
.c17:focus {
  background: hsla(146,64%,36%);
}

.c17:disabled {
  background: hsl(0deg 0% 0% / 70%);
}

.c7 {
  width: 100%;
  height: 208px;
  position: relative;
}

.c8 {
  background-color: hsl(166,100%,34%);
  width: 100%;
  height: 128px;
  border-radius: 5px;
  position: relative;
  z-index: 0;
}

.c8:before,
.c8:after {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  content: '';
  border-radius: 5px;
}

.c8:before {
  background: linear-gradient( 90deg,hsl(166,100%,34%) 64.41%,rgba(0,166,136,0) 100% );
  z-index: 0;
}

.c8:after {
  background-image: url('/pattern.png');
  background-repeat: no-repeat;
  background-size: 446px;
  background-position: right;
  z-index: -1;
}

.c9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 32px;
  position: absolute;
  z-index: 0;
  bottom: 0;
}

.c9 h4 {
  color: hsla(0,0%,7%);
  font-weight: 500;
  font-size: 28px;
  margin-top: 52px;
}

.c9 span {
  color: hsla(0,0%,52%);
  font-weight: 500;
  font-size: 14px;
}

.c10 {
  background-color: hsla(0,0%,98%);
  width: 128px;
  height: 128px;
  display: block;
  border: 2px solid hsla(0,0%,98%);
  border-radius: 64px;
  margin-right: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  background-color: hsla(0,0%,98%);
  padding: 3rem 4rem 6rem;
}

.c0 > section:first-child {
  margin-right: 4rem;
}

.c6 {
  width: 100%;
}

.c11 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 40px;
}

.c12 {
  width: 340px;
  padding-left: 32px;
}

@media (max-width:768px) {
  .c18 {
    padding-left: 0;
  }

  .c18 h3 {
    text-align: center;
    border-bottom: 0;
  }
}

@media (max-width:768px) {
  .c20 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    border: 1px solid hsl(0,0%,93%);
    border-radius: 8px;
    padding: 20px;
    height: auto;
    margin-bottom: 20px;
    text-align: center;
  }

  .c20 b {
    display: block;
    padding-right: 0;
  }

  .c20 b::before {
    content: '';
  }
}

@media (max-width:768px) {
  .c21 {
    margin: 20px auto 0;
  }
}

@media (max-width:768px) {
  .c7 {
    margin-top: 26px;
  }
}

@media (max-width:768px) {
  .c9 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    text-align: center;
    padding-left: 0;
    margin-bottom: -40px;
  }

  .c9 h4 {
    margin-top: 16px;
  }
}

@media (max-width:768px) {
  .c10 {
    margin-right: 0;
  }
}

@media screen and (max-width:950px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }

  .c0 > section:first-child {
    margin-bottom: 1rem;
  }
}

@media (max-width:1170px) {
  .c11 {
    margin-top: 80px;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (max-width:1170px) {
  .c12 {
    width: 100%;
    padding-left: 0;
    margin-bottom: 40px;
  }
}

<div>
  <div
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        profile:welcomeUser
      </div>
      <h3
        class="c3"
      >
        profile:userArea
      </h3>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2M12 11a4 4 0 100-8 4 4 0 000 8z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:myProfile
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M22 6l-10 7L2 6"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:messages
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="20"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20.84 2.61a5.5 5.5 0 00-7.78 0L12 3.67l-1.06-1.06a5.501 5.501 0 00-7.78 7.78l1.06 1.06L12 19.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78v0z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:favoriteTechnologies
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 2L3 6v14a2 2 0 002 2h14a2 2 0 002-2V6l-3-4H6zM3 6h18M16 10a4 4 0 11-8 0"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:userOrders
      </a>
      <h3
        class="c3"
      >
        profile:researcherArea
      </h3>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M22 12h-6l-2 3h-4l-2-3H2"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M5.45 5.11L2 12v6a2 2 0 002 2h16a2 2 0 002-2v-6l-3.45-6.89A2 2 0 0016.76 4H7.24a2 2 0 00-1.79 1.11v0z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:myTechnologies
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 6H21"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M8 12H21"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M8 18H21"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M3 6H3.01"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M3 12H3.01"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M3 18H3.01"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:myServices
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 4h2a2 2 0 012 2v14a2 2 0 01-2 2H6a2 2 0 01-2-2V6a2 2 0 012-2h2"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M15 2H9a1 1 0 00-1 1v2a1 1 0 001 1h6a1 1 0 001-1V3a1 1 0 00-1-1z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:orders
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3M12 17h.01"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:questions
      </a>
      <h3
        class="c3"
      >
        profile:reviewerArea
      </h3>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2M12 11a4 4 0 100-8 4 4 0 000 8z"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:profileCurate
      </a>
      <a
        class="c4"
      >
        <svg
          fill="none"
          height="24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 19a8 8 0 100-16 8 8 0 000 16zM21 21l-4.35-4.35"
            stroke="hsla(0, 0%, 52%)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </svg>
        profile:curateTechnologies
      </a>
      <a
        class="c4"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="hsla(0, 0%, 52%)"
          stroke-width="1.5"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M536.1 273H488c-4.4 0-8 3.6-8 8v275.3c0 2.6 1.2 5 3.3 6.5l165.3 120.7c3.6 2.6 8.6 1.9 11.2-1.7l28.6-39c2.7-3.7 1.9-8.7-1.7-11.2L544.1 528.5V281c0-4.4-3.6-8-8-8zm219.8 75.2l156.8 38.3c5 1.2 9.9-2.6 9.9-7.7l.8-161.5c0-6.7-7.7-10.5-12.9-6.3L752.9 334.1a8 8 0 0 0 3 14.1zm167.7 301.1l-56.7-19.5a8 8 0 0 0-10.1 4.8c-1.9 5.1-3.9 10.1-6 15.1-17.8 42.1-43.3 80-75.9 112.5a353 353 0 0 1-112.5 75.9 352.18 352.18 0 0 1-137.7 27.8c-47.8 0-94.1-9.3-137.7-27.8a353 353 0 0 1-112.5-75.9c-32.5-32.5-58-70.4-75.9-112.5A353.44 353.44 0 0 1 171 512c0-47.8 9.3-94.2 27.8-137.8 17.8-42.1 43.3-80 75.9-112.5a353 353 0 0 1 112.5-75.9C430.6 167.3 477 158 524.8 158s94.1 9.3 137.7 27.8A353 353 0 0 1 775 261.7c10.2 10.3 19.8 21 28.6 32.3l59.8-46.8C784.7 146.6 662.2 81.9 524.6 82 285 82.1 92.6 276.7 95 516.4 97.4 751.9 288.9 942 524.8 942c185.5 0 343.5-117.6 403.7-282.3 1.5-4.2-.7-8.9-4.9-10.4z"
          />
        </svg>
        profile:revisionsHistory
      </a>
      <button
        class="c5"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M868 732h-70.3c-4.8 0-9.3 2.1-12.3 5.8-7 8.5-14.5 16.7-22.4 24.5a353.84 353.84 0 0 1-112.7 75.9A352.8 352.8 0 0 1 512.4 866c-47.9 0-94.3-9.4-137.9-27.8a353.84 353.84 0 0 1-112.7-75.9 353.28 353.28 0 0 1-76-112.5C167.3 606.2 158 559.9 158 512s9.4-94.2 27.8-137.8c17.8-42.1 43.4-80 76-112.5s70.5-58.1 112.7-75.9c43.6-18.4 90-27.8 137.9-27.8 47.9 0 94.3 9.3 137.9 27.8 42.2 17.8 80.1 43.4 112.7 75.9 7.9 7.9 15.3 16.1 22.4 24.5 3 3.7 7.6 5.8 12.3 5.8H868c6.3 0 10.2-7 6.7-12.3C798 160.5 663.8 81.6 511.3 82 271.7 82.6 79.6 277.1 82 516.4 84.4 751.9 276.2 942 512.4 942c152.1 0 285.7-78.8 362.3-197.7 3.4-5.3-.4-12.3-6.7-12.3zm88.9-226.3L815 393.7c-5.3-4.2-13-.4-13 6.3v76H488c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h314v76c0 6.7 7.8 10.5 13 6.3l141.9-112a8 8 0 0 0 0-12.6z"
          />
        </svg>
        profile:logout
      </button>
    </section>
    <section
      class="c6"
    >
      <section
        class="c7"
      >
        <section
          class="c8"
        />
        <section
          class="c9"
        >
          <img
            class="c10"
            src="https://ui-avatars.com/api/?name=undefined?format=svg&rounded=true&size=128"
          />
          <section>
            <h4 />
            <span>
              profile:curate
            </span>
          </section>
        </section>
      </section>
      <section
        class="c11"
      >
        <aside
          class="c12"
        >
          <section
            class="c13"
          >
            <h3>
              Nova área de atuação
            </h3>
            <form
              class="c14"
            >
              <section
                class="c15"
              >
                <label
                  class="c16"
                >
                  Área de atuação
                </label>
                <div
                  class=" css-dyr6gj-container"
                >
                  <div
                    class=" css-goxfpg-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class=" css-1wa3eu0-placeholder"
                      >
                        Selecione a área
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            id="react-select-reviewer-categories-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 1.4rem; font-family: 'Montserrat'; font-weight: 400; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1ehwr9j-IndicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
              <section
                class="c15"
              >
                <label
                  class="c16"
                >
                  Subarea de atuação
                </label>
                <div
                  class=" css-19pra7p-container"
                >
                  <div
                    class=" css-goxfpg-control"
                  >
                    <div
                      class=" css-g1d714-ValueContainer"
                    >
                      <div
                        class=" css-1wa3eu0-placeholder"
                      >
                        Nenhuma sub-área disponível
                      </div>
                      <div
                        class="css-b8ldur-Input"
                      >
                        <div
                          class=""
                          style="display: inline-block;"
                        >
                          <input
                            aria-autocomplete="list"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            disabled=""
                            id="react-select-reviewer-sub-categories-input"
                            spellcheck="false"
                            style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                          <div
                            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-size: 1.4rem; font-family: 'Montserrat'; font-weight: 400; letter-spacing: normal; text-transform: none;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1ehwr9j-IndicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-tlfecz-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-6q0nyr-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
              <button
                class="c17"
                disabled=""
                type="submit"
              >
                Adicionar Área de Atuação
              </button>
            </form>
          </section>
        </aside>
        <section
          class="c18"
        >
          <h3>
            profile:curateMySpecialties
          </h3>
          <ul
            class="c19"
          >
            <li
              class="c20"
            >
              <section>
                <b>
                  Category
                </b>
                 
                Subcategory
              </section>
              <button
                class="c21"
                type="button"
              >
                helper:remove
              </button>
            </li>
          </ul>
        </section>
      </section>
    </section>
  </div>
</div>
`;
